fix clipped pie chart

--- a/WebApp/ClientApp/src/components/home/stats/StatsBlock.module.scss
+++ b/WebApp/ClientApp/src/components/home/stats/StatsBlock.module.scss
@@ -19,7 +19,7 @@
 
 .pie-days > div {
 	@media (min-width: 1024px) {
-		width: 190px;
+		width: 200px;
 	}
 }
 
